trying to give life  to skeleten

--- a/asymmetricenc/templates/fchat.html
+++ b/asymmetricenc/templates/fchat.html
@@ -89,6 +89,18 @@
             </div>
         </main>
     </div>
+            <!-- Add these to your fchat.html -->
+        <div id="messagesContainer" class="messages-container">
+            <!-- Messages will be loaded here -->
+        </div>
+
+        <div id="conversationsList" class="conversations-list">
+            <!-- Conversations will be loaded here -->
+        </div>
+
+        <input type="text" id="messageInput" placeholder="Type a message..." />
+        <button id="sendBtn">Send</button>
+        <input type="text" id="searchInput" placeholder="Search conversations..." />
 
     <!-- Mobile sidebar overlay -->
     <div class="sidebar-overlay" id="sidebarOverlay"></div>
