fixed double login error

--- a/asymmetricenc/static/chat.css
+++ b/asymmetricenc/static/chat.css
@@ -325,7 +325,10 @@ body {
   background: var(--background-chat);
 }
 
-.chat-header {
+L
+
+
+\\{
   padding: 1rem 1.5rem;
   border-bottom: 1px solid var(--border-color);
   background: var(--background-secondary);
