holding project for great comback

--- a/asymmetricenc/templates/fchat.html
+++ b/asymmetricenc/templates/fchat.html
@@ -42,7 +42,8 @@
 
             <!-- Online Users Section -->
             <div class="online-users" id="online-users">
-                
+               <h2> online_users </h2>
+               <p>online-users</p>
                 <!-- Online users will be loaded here -->
             </div>
         </aside>
